instructions for double stack on 3w

--- a/12-30w.html
+++ b/12-30w.html
@@ -99,7 +99,8 @@ PICTURE
 
 <h4>Connect hydroSTIK and load</h4>
 
-<b>IMPORTANT: The fuel cell stack requires unobstructed airflow to all vents in order to function as the oxygen used in the electrochemical reaction is drawn through these vents. Obstructed air supply will reduce the performance and lifetime of your stacks.</b>
+<b>Important</b>
+<p>The fuel cell stack requires unobstructed airflow to all vents in order to function as the oxygen used in the electrochemical reaction is drawn through these vents. Obstructed air supply will reduce the performance and lifetime of your stacks.</p>
 
 <ol>
 <li>Ensure the plastic clip on the tube between the regulator and the inlet valve is closed</li>
