--- a/oldhtml/h2safety.html
+++ b/oldhtml/h2safety.html
@@ -1,3 +1,4 @@
+<html>
 <h3>Safety</h3>
 
 <ul>
@@ -11,3 +12,4 @@
 <li>Keep away from alkaline and acidic environments</li>
 <li>This kit is supplied as a test and development tool. Do not use it to power safety critical appliances</li>
 </ul>
+</html>
