--- a/oldhtml/h2supply.html
+++ b/oldhtml/h2supply.html
@@ -1,5 +1,7 @@
+<html>
 <h3>Hydrogen supply</h3>
-
+<p>
 Where delivery method permits, your H2MDK will be supplied with pre-filled HydroSTIK. 
 To refill your HydroSTIK we recommend that you purchase a Horizon Fuel Cell HydroFILL home electrolyser which generates hydrogen from electricity and distilled water. HydroFILL can run on mains electricity or on DC. 
-For more information see the <a href="http://www.horizonfuelcell.com/hydrogen_solutions.htm">Horizon fuel cell website</a>.
+For more information see the <a href="http://www.horizonfuelcell.com/hydrogen_solutions.htm">Horizon fuel cell website</a>.</p>
+</html>
